--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">SQLiteContentProviderDemo</string>
-    <string name="name">Tên</string>
+    <string name="mName">Tên</string>
     <string name="phone">Số điện thoại</string>
 </resources>
